roles/home_cluster/files/kubernetes/duplicati/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duplicati
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: duplicati
  template:
    metadata:
      labels:
        app: duplicati
    spec:
      nodeSelector:
        node-type: local
      containers:
        - name: duplicati
          image: lscr.io/linuxserver/duplicati:2.4.0
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "4"
          ports:
            - containerPort: 8200
              name: web
          volumeMounts:
            - name: ssd
              mountPath: /config
              subPath: duplicati
            - name: ssd
              mountPath: /source
      volumes:
        - name: ssd
          persistentVolumeClaim:
            claimName: duplicati
