roles/home_cluster/files/kubernetes/duplicati/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duplicati
spec:
  ports:
    - port: 8200
  selector:
    app: duplicati
